[Compare] Fix disclosure scroll bar
On Mac, the dialog width is not large enough that one item in the
disclosure got broken into two lines which is different from expected
UI and leading to a scroll bar. This CL fixes this issue by making
the dialog slightly wider so that that item can fit in one line.

Before: https://screenshot.googleplex.com/48osrZcuqvmnSdh
After: https://screenshot.googleplex.com/4x5SvyApeFfiwEy

Bug: 362290369
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5813473
Commit-Queue: Yue Zhang <yuezhanggg@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1346965}

--- a/chrome/browser/resources/commerce/product_specifications/disclosure/app.css
+++ b/chrome/browser/resources/commerce/product_specifications/disclosure/app.css
@@ -10,7 +10,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  max-width: 410px;
 }
 
 #titleContainer {
